# stiv

./: Cargo.toml  Dockerfile  README.md  notes.txt
src/: app.rs  detect_support.rs  kitty_diacritics.rs  logging.rs  main.rs  renderer.rs  shm.rs  stiv_event.rs  stiv_image.rs  ui.rs  utils.rs  win_info.rs
tools/: Pipfile  pillow-raw.py  send-png.py
