[package]
name = "stiv"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
image = "0.25.9"
imagesize = "0.14.0"
itertools = "0.14.0"
rand = "0.10.0"
ratatui = "0.29.0"
rustix = { version = "1.1.4", features = ["fs", "mm", "shm"] }
termion = "4.0.6"
